<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/statsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_graph"
        android:visible="false"
        android:title="@string/topSongs"/>

    <item
        android:id="@+id/savedEventsFragment"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/ic_stars"
        android:title="@string/savedEvents"/>

    <item
        android:id="@+id/eventsMapsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_event"
        android:title="@string/event"/>

    <item
        android:id="@+id/djProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"/>


</menu>
