<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.UserProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profile_BAR_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/myProfile"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/profile_LAY_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@+id/dj_profile_BTN_logout"
        app:layout_constraintTop_toBottomOf="@+id/profile_BAR_title"

        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dj_profile_LBL_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nameWithValue"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dj_profile_LBL_stageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/stageNameWithValue"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dj_profile_LBL_phone"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/phoneWithValue"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dj_profile_LBL_email"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/emailWithValue"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dj_profile_LBL_types"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/userTypesWithValue"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dj_profile_LBL_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/genresWithValue"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/defaultInterface"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/profile_CPG_chips"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/profile_CP_dj"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:padding="15dp"
                    android:text="@string/dj"
                    android:textAlignment="center"
                    app:checkedIcon="@drawable/ic_check"

                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/profile_CP_clubber"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minWidth="80dp"
                    android:padding="15dp"

                    android:text="@string/clubber"
                    android:textAlignment="center"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/profile_CP_pr"
                    style="@style/Widget.MaterialComponents.Chip.Choice"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:padding="15dp"
                    android:text="@string/pr"
                    android:textAlignment="center"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dj_profile_FAB_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="123"
        android:elevation="10dp"
        android:src="@drawable/ic_edit"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_LAY_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_LAY_info" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dj_profile_BTN_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_logout"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>