<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filters_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/filtersLBL"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filters_LBL_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/dateRange"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/filters_BTN_dt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/selectDateRange"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_calendar"
        app:iconGravity="textStart" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filters_LBL_radius"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/searchRadius"
        android:textSize="16sp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/filters_SLD_radius"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:stepSize="1.0"
        android:value="20.0"
        android:valueFrom="1.0"
        android:valueTo="100.0" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/filters_BTN_selectGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/selectGenres"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_music"
        app:iconGravity="textStart" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filters_LBL_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:maxHeight="200dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/genresWithValue"
        android:scrollbars="vertical"
        android:textSize="16sp" />
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/filters_BTN_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/save"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filters_BTN_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_cancel"
            app:iconGravity="textStart" />

    </LinearLayout>

</LinearLayout>