<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rescard_LAY_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2.5dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="2.5dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rescard_IMG_image"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rescard_LBL_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:maxEms="10"
            android:maxLines="10"
            android:singleLine="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rescard_IMG_image"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:gravity="center|center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rescard_IMG_image"
            app:layout_constraintTop_toBottomOf="@+id/rescard_LBL_title">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/rescard_BTN_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:text="@string/like"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rescard_BTN_unlike"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:maxLines="1"
                android:text="@string/unlike"
                app:cornerRadius="15dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/rescard_LAY_likesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rescard_LBL_likes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"

                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/totalLikes"
                android:textSize="12sp"

                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rescard_LBL_unlikes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/totalUnlikes"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rescard_BTN_played"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/markAsPlayed"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_playlist_play"
            app:iconGravity="textStart"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rescard_LAY_likesView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>